--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,8 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Arquivos específicos do projeto que não devem ir para o Git
+scripts/criar_admin.py
+app/gerar_hash.py
+initial_data.py
