--- a/.gitignore
+++ b/.gitignore
@@ -208,5 +208,6 @@ __marimo__/
 
 # Arquivos específicos do projeto que não devem ir para o Git
 scripts/criar_admin.py
+scripts/check_admin_db.py
 app/gerar_hash.py
 initial_data.py
