Integração projeto local com Supabase.

--- a/backend/.env
+++ b/backend/.env
@@ -4,7 +4,7 @@ ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=60
 
 # --- Banco de Dados do Supabase (PostgreSQL) ---
-DATABASE_URL=postgresql://postgres:25@llProjInit@db.iitcbbxyoxxnkljevpvr.supabase.co:5432/postgres
+DATABASE_URL=postgresql://postgres:CNP9txVCWn3QHpWb@db.iitcbbxyoxxnkljevpvr.supabase.co:5432/postgres
 
 # --- Configurações opcionais da API do Supabase ---
 SUPABASE_URL=https://iitcbbxyoxxnkljevpvr.supabase.co
