--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,9 @@
     "web-vitals": "^2.1.4",
     "yup": "^1.6.1"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
